--- a/process/css/sections/_navigation.css
+++ b/process/css/sections/_navigation.css
@@ -11,10 +11,10 @@ nav {
     flex: 1 0 auto;   
     text-align: center;
     font-size: 1.2rem;
-    padding: 0 2rem 0 0;
+    padding: 0 3rem 0 0;
         
         @media $micro {
-            padding: 0 1.2rem 0 0;
+            padding: 0 2rem 0 0;
         }
     }
 
